syntax = "proto3";
option csharp_namespace = "phoenix";
option go_package = "./models";
package phoenix;

message KeyValuePair {
   string key = 1;
   string value = 2;
}

